<resources>
    <string name="app_name">SugarThrow</string>
    <string name="title">Sugar Throw</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="food_diary_space">\tFood Diary</string>
    <string name="play_space">\tPlay Sugar Throw</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="search_text">Food Search</string>
    <string name="your_regular">Your Regular Foods</string>
    <string name="space"> </string>
    <string name="gram">g</string>
    <string name="hud_points">%1$s pts</string>
    <string name="hud_percent">%1$s%2$s</string>
    <string name="home_title">Sugar Throw</string>
    <string name="diary_title">Diary</string>
    <string name="progress_title">Progress</string>
    <string name="food_database_title">Food Database</string>
    <string name="machine_learning_title">Risk Foods</string>
    <string name="game_title">Play Game</string>
    <string name="info_title">Info</string>
    <string name="help_title">Help</string>
    <string name="settings_title">Settings</string>
    <string name="firstAdd">First Add Item from Regular Foods</string>
    <string name="secondAdd">Second Add Item from Regular Foods</string>
    <string name="thirdAdd">Third Add Item from Regular Foods</string>
    <string name="fourthAdd">Fourth Add Item from Regular Foods</string>
    <string name="fifthAdd">Fifth Add Item from Regular Foods</string>
    <string name="search_icon">The Search Icon</string>
    <string name="yesterdayChevron">Select Left Chevron to Return Yesterday\'s Date</string>
    <string name="tomorrowChevron">Select Right Chevron to Return Tomorrow\'s Date</string>
    <string name="right_chevron">Chevron used as a link</string>
    <string name="hero_image">Hero image goes here</string>
    <string name="right_border">Right Border for Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="placeholder_regFoods_1">Avacado</string>
    <string name="placeholder_regFoods_2">Cheddar Cheese - 1 cup, diced</string>
    <string name="placeholder_regFoods_3">Jelly Babies</string>
    <string name="placeholder_regFoods_4">Cheddar Cheese - 1 slice (1 oz)</string>
    <string name="placeholder_regFoods_5">What happens when the name is </string>
    <string name="placeholder_date">01-01-1970</string>
    <string name="placeholder_no_entries">No Entries</string>
    <string name="dropdown_sugar">Sugar</string>
    <string name="dropdown_calories">Calories</string>
    <string name="dropdown_fat">Fat</string>
    <string name="dropdown_saturates">Saturates</string>
    <string name="dropdown_carbs">Carbs</string>
    <string name="dropdown_salt">Salt</string>
    <string name="dropdown_protein">Protein</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="placeholder_points">100</string>
    <string name="points_xp">XP</string>
    <string name="pie_chart_calories_text">Calories</string>
    <string name="pie_chart_carbs_text">Carbs</string>
    <string name="pie_chart_daily_intake_text">Today\'s Daily Intake</string>
    <string name="pie_chart_fat_text">Fat</string>
    <string name="pie_chart_protein_text">Protein</string>
    <string name="pie_chart_salt_text">Salt</string>
    <string name="pie_chart_saturates_text">Saturates</string>
    <string name="streak_title">Streak</string>
    <string name="pie_chart_sugar_text">Sugar</string>
    <string name="star_for_points">Star for Points</string>
    <string name="placeholder_image_for_line_graph">placeholder image for line graph</string>
    <string name="placeholder_button">Button</string>
    <string name="search_no_results">No Results</string>
    <string name="search_for_foods">Search For Foods</string>
    <string name="sign_out">Sign Out</string>
    <string name="colour">Colour</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Richard Ellor</string>
    <string name="username">Username</string>
    <string name="username_placeholder">re16621</string>
    <string name="blue">Blue</string>
    <string name="turquoise">Turquoise</string>
    <string name="points">Points</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="notifications_on">Notifications On</string>
    <string name="percent_sign">%</string>
    <string name="exit_text">EXIT</string>
    <string name="the_account_circle_image">The account circle image</string>
    <string name="placeholder_username">Username</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome!</string>
    <string name="sugar_throw_logo">Sugar Throw Logo</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">DOB(DD-MM-YYYY)</string>
    <string name="first_name">First Name</string>
    <string name="height_in_feet_and_inches">Height (in feet and inches)</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="weight_in_stone_and_pounds">Weight (in stone and pounds)</string>
    <string name="stone">st</string>
    <string name="goals">Goals</string>
    <string name="sugar">Sugar</string>
    <string name="set_quantities">Set Quantities</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="salt">Salt</string>
    <string name="saturates">Saturates</string>
    <string name="kcal">kcal</string>
    <string name="no_goals">No Goals</string>
    <string name="update_quantities">update Quantities</string>
    <string name="reduce_sugar">Reduce Sugar</string>
    <string name="set_weekly_goals">Set Weekly Goals</string>
    <string name="sugar_allowance">Sugar Allowance</string>
    <string name="update_weekly_goals">Update Weekly Goals</string>
    <string name="api">API</string>
    <string name="attribution_to_nutritionix">Attribution to Nutritionix</string>
    <string name="clear">CLEAR</string>
    <string name="_20g">20g</string>
    <string name="_2000kcal">2000kcal</string>
    <string name="_260g">260g</string>
    <string name="_50g">50g</string>
    <string name="_6g">6g</string>
    <string name="_70g">70g</string>
    <string name="_90g">90g</string>
    <string name="daily_amounts">Daily Amounts</string>
    <string name="info_intro">The purpose of this app is to encourage you to eat healthy and to
    cut down on your sugar consumption.</string>
    <string name="info_points">Points</string>
    <string name="info_points_text">A key facet of this app is its use of gamification. Points are used to
    allow you to play the \"Sugar Throw\" game. If you do not have any points, you cannot play the game. You
    will be rewarded or deducted points based on a number of criteria:</string>
    <string name="points_awarded">Points awarded for:</string>
    <string name="points_awarded_point1">- Logging foods (1 pt)"</string>
    <string name="points_awarded_point2">- Logging foods for days in a row (2 pts)"</string>
    <string name="points_awarded_point3">- Reaching a goal (1 pt)"</string>
    <string name="points_awarded_point4">- Logging 10 different food items (10 pts)"</string>
    <string name="points_deducted">Points deducted for:</string>
    <string name="points_deducted_point1">- Removing foods (-1 pt)"</string>
    <string name="points_deducted_point2">- Going over daily allowance (-2 pts)"</string>
    <string name="points_deducted_point3">- Failing a goal (-5 pts)"</string>
    <string name="points_explained">You will only be allowed to play the \"Sugar Throw\" game, if you have logged
        at least 7 foods for that day.</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text">One of the key gamification techniques used in this app is \"Feedback\".
    You will be given personalised feedback based upon your goals, usage, and daily allowance of food.</string>
    <string name="feedback_popup">This is an example of positive feedback, in which points are being rewarded.</string>
    <string name="feedback_dialog">If you are about to exceed a daily allowance of food (thereby exceeding a goal - if one is set),
    you will first be prompted by a dialog box. If you confirm, you will then be given feedback as follows:</string>
    <string name="feedback_deduction">Here, you will be deducted points</string>
    <string name="goals_title">Goals</string>
    <string name="goals_intro">Another key component of this app is the ability to set goals. You are given the opportunity
        to set daily and weekly goals, based on food consumption.</string>
    <string name="goals_explain">Daily goals can be set for each nutritional group, i.e. sugar, calories, carbs, etc.
        Weekly goals can only be set for sugar.</string>
    <string name="goals_howto">To set goals, go to Settings > Goals</string>
    <string name="goals_setting">Setting goals is as simple as entering your goal amount and then pressing to the \"UPDATE\" button</string>
    <string name="help_diary">Diary</string>
    <string name="diary_intro">This section outlines how to use the food Diary.</string>
    <string name="diary_consists">The Diary consists of a search bar (which will lead to the food database),
        arrows to change the date (so as to look at previous diaries), a regular foods section, and the diary itself.
        The above image shows that there are no diary entries for this date.</string>
    <string name="diary_filled">A filled diary looks like this. The user can increase or decrease the quantity of that food
        (using the arrows located to the left of the food item). They can also remove a food by using the red circles</string>
    <string name="diary_nutrition">The nutritional content of the food can be seen by clicking on the food item.
        The percentage corresponds to the daily amount that user has (based on default values or goals set by the user).</string>
    <string name="diary_toolong">In some cases, the food names are too long, so clicking on them (and making the drop down appear)
        will also result in the food name scrolling from right to left. </string>
    <string name="help_fooddb">Food Database</string>
    <string name="help_api">This app encompasses an online food database, powered by the Nutritionix API</string>
    <string name="database_howto">To use the database, simply click on the search bar at the top of the page and enter
        the food you are looking for</string>
    <string name="close_the_game">Close the game</string>
</resources>