<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.richa.sugarthrow.GameActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize"
            android:background="@color/cyan"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:text="@string/game_title"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_white"
                android:contentDescription="@string/search_icon"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/game_content"
        android:id="@+id/include" />

    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="55dp"
        android:layout_height="51dp"
        android:layout_gravity="bottom|start"
        android:background="@color/white"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="top|right"
        app:srcCompat="@drawable/ic_close_black"
        android:contentDescription="@string/close_the_game" />

</android.support.design.widget.CoordinatorLayout>
